--- a/public/demo.html
+++ b/public/demo.html
@@ -67,13 +67,10 @@
           [(#SET{image_xl, #FICHIER})]
         })]
 
-        [(#SET{url, #URL_DOCUMENT})]
-        [(#SET{titre, #TITRE})]
-        [(#SET{desc, #DESCRIPTIF})]
-        [(#SET{alt, [(#TITRE|sinon{#DESCRIPTIF}|sinon{#FICHIER|basename}|supprimer_tags)]})]
+        [(#SET{alt, [(#TITRE|sinon{#DESCRIPTIF}|sinon{#FICHIER|basename}|textebrut)]})]
 
-        <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="#GET{image_xl}" itemprop="contentUrl" data-size="[(#GET{image_xl}|largeur)][x(#GET{image_xl}|hauteur)]" data-s="[(#GET{image_s})]" data-s-size="[(#GET{image_s}|largeur)][x(#GET{image_s}|hauteur)]" data-m="[(#GET{image_m})]" data-m-size="[(#GET{image_m}|largeur)][x(#GET{image_m}|hauteur)]" data-l="[(#GET{image_l})]" data-l-size="[(#GET{image_l}|largeur)][x(#GET{image_l}|hauteur)]">
+        <figure class="o-layout__item u-5/10@mobileLs c-portfolio__figure c-figure" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+          <a href="#GET{image_xl}" itemprop="contentUrl" data-size="[(#GET{image_xl}|largeur)][x(#GET{image_xl}|hauteur)]" data-s="[(#GET{image_s})]" data-s-size="[(#GET{image_s}|largeur)][x(#GET{image_s}|hauteur)]" data-m="[(#GET{image_m})]" data-m-size="[(#GET{image_m}|largeur)][x(#GET{image_m}|hauteur)]" data-l="[(#GET{image_l})]" data-l-size="[(#GET{image_l}|largeur)][x(#GET{image_l}|hauteur)]"[ data-title="(#TITRE|textebrut)"][ data-desc="(#DESCRIPTIF|textebrut)"][ data-author="(#CREDITS|textebrut)"]>
             <img src="
               [(#GET{vignette_l})]
             " srcset="
@@ -81,13 +78,13 @@
               [(#GET{vignette_m}|=={#GET{vignette_s}}|non)[,(#GET{vignette_m})[ (#GET{vignette_m}|largeur)w]]]
               [(#GET{vignette_l}|=={#GET{vignette_m}}|non)[,(#GET{vignette_l})[ (#GET{vignette_l}|largeur)w]]]
               [(#GET{image_m}|=={#GET{vignette_m}}|non)[,(#GET{image_m})[ (#GET{image_m}|largeur)w]]]
-            " sizes="100vw" itemprop="thumbnail" alt="#GET{alt}" class="c-figure__img" />
+            " sizes="100vw" itemprop="thumbnail" alt="[(#GET{alt})]" class="c-figure__img" />
           </a>
-          [(#GET{titre}|ou{#GET{desc}}|oui)
+          [(#TITRE|ou{#DESCRIPTIF}|ou{#CREDITS}|oui)
             <figcaption itemprop="caption">
-              [<h3 class="c-figure__title" itemprop="name">(#GET{titre})</h3>]
-              [<div class="c-figure__desc" itemprop="description">(#GET{desc})</div>]
-              <!-- crédits : <p class="c-figure__author" itemprop="author"></p> -->
+              [<h3 class="c-figure__title" itemprop="name">(#TITRE)</h3>]
+              [<div class="c-figure__desc" itemprop="description">(#DESCRIPTIF)</div>]
+              [<p class="c-figure__author" itemprop="author">(#CREDITS)</p>]
             </figcaption>
           ]
         </figure>
